Alphabet substitution: + Russian version

--- a/alphabets/text_replacer.ipynb
+++ b/alphabets/text_replacer.ipynb
@@ -4,12 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Text replacer"
+    "## Text replacer\n",
+    "\n",
+    "This script replaces character sequences in a specially formatted input file, one by one.\n",
+    "\n",
+    "Note that sequences are applied immediately, so you cannot define a substition for CH after you defined a replacement for C. More complex combinations (such as CH) shoudl always come first, before their components are affected."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,18 +23,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = io.open(\"alice_in_georgian.md\", mode=\"r\", encoding=\"utf-8\")\n",
+    "f = io.open(\"alice_in_russian.md\", mode=\"r\", encoding=\"utf-8\")\n",
     "myString = f.read()\n",
     "f.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
