Markov generator with 2 words base

--- a/learning python/ch13 word freq.ipynb
+++ b/learning python/ch13 word freq.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -96,14 +96,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.01500082015991211\n"
+      "0.014000892639160156\n"
      ]
     }
    ],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,16 +142,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'here'"
+       "'and'"
       ]
      },
-     "execution_count": 374,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,14 +176,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "knew "
+      "three "
      ]
     }
    ],
@@ -208,16 +208,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'king i do it but agreed on a violation of her and the delicacy may she ran off with some meat were ignorant of her was directly her when bingley and so excessively handsome enough to his happiness of all night spent in the modern with them and at so she represented and after officers mr collins was to longbourn coming down and all my dear paws and he had only mustard isn t you will not speak severely who could never they could marry miss darcy was over hertfordshire the last the want abilities who live but absence from the carriage and on your relations all her brother we went to her mother and concise and offered olive branch but she was with an excellent disposition must still possessed of seeing her uncle and chicken elizabeth with her on the gryphon and after many amiable young man the pleasure in time but when it could not equal in common indeed i am to send round it there was an opportunity for speech nothing but checked himself suddenly dropping his warmest affection for a fortune and paris and within the sisters elizabeth still more they you showed her parasol which in'"
+       "'king said of the thought him but it any husband call the puppy it had been sitting on every member of their brother and myself at brighton therefore liberally bestowed her flamingo was a fellow what do cure the match it and there was now they ought not blame and his having one mind was and without it they will recollect what relations whose character to say no other feelings in such amiable when it had been in the person who have had never in hertfordshire this cannot laugh and whether any of feeling of punch to make herself and sister was happily i have happened could bear solitude on your uncle has not i like a few of trouble you had been mistaken mr darcy s drawing room before and write it must be civil to gratify him which case then she should if we would be assured her imprudence i are safe to his life of em do i ask his acquaintance with one of this here elizabeth really ill natured and in spirits they should be so affectionately into the army she admired the song i am only this before mentioned his return into the place they reproached'"
       ]
      },
-     "execution_count": 377,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,6 +233,91 @@
     "    return out\n",
     "\n",
     "generate('king',200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Collect the stats as a dict of dicts\n",
+    "markov2 = dict()\n",
+    "for i in range(len(wseq)-2):\n",
+    "    combo = wseq[i]+' '+wseq[i+1]\n",
+    "    if combo not in markov2:\n",
+    "        markov2[combo] = {wseq[i+2]: 1}\n",
+    "    else:\n",
+    "        markov2[combo][wseq[i+2]] = markov2[combo].get(wseq[i+2],0)+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'alice': 1, 'to': 4, 'with': 1, 'turning': 1, 'gravely': 1, 'for': 1}"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "markov2['king said']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "or\n",
+      "this "
+     ]
+    }
+   ],
+   "source": [
+    "print(proceed(markov['alice']))\n",
+    "print(proceed(markov2['alice thought']),end=' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'caterpillar s making personal remarks now the right disposition but that was a fortnight later in july and must be attributed and as it was done for lydia we may as well as some persons imagine i am in earnest contemplation and returned to the beauties of matlock chatsworth dovedale or the great surprise of such a subject which they were separated by the easiness of temper than her being the sister of hers how it could not be prevailed upon to get husbands what a pity it wouldn t be angry my dearest child she was coming down again by letter for the baby the cook threw a real gloom over their whole bodies in a different quarter from mr collins could not be easily believed that she was saying and the chosen partner of her sister had given a very innocent diversion and perfectly compatible with the invalid who continued however imperturbably grave she looked up and say how happy they should meet what a letter of excuse from his amiable charlotte by the lady with whom he might become a part of what is all i am dressed and tell us a story do not pretend to be paid the visit chapter 6 the ladies then withdrew all of them and i take your choice the next and so rich and green waiting in a great curiosity and elizabeth saw directly that her wishes and sincerely affected herself accompanied her out of this sounds of more fashion than fortune less disposed to pardon his interference which asked no extraordinary stretch of belief it was next to no suspicion the faces of both i know not whether she were to pass away and miss bingley was that like said alice very humbly you had no intelligence to send for the moment alice appeared she was only entailed on mr collins but if he marry prudently his wife understand his character never occurred to the proposal and it cannot be too much reason to think meanly of all the young people this is not there is also one other person to discourage him though to the duchess it had always been her favourite walk when the expectation of the letter from his horse or his dependence on her judgment but it s so extremely just then she had walked fast to get an opportunity of dancing was a curious dream said alice allow me or do i play next my fingers said elizabeth angrily for i consider myself as quitting that sphere he is very impertinent of him in marriage this gallantry was not much reason to hope he might have been that it was unpardonable i cannot quite agree with lady lucas were speedily applied to miss bingley charles writes in the sea the gryphon only answered come on here thought alice without pictures or conversations so she began thinking over other children she knew not what you had given him an invitation to stay with it is make haste'"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def generate2(seed,n=10):\n",
+    "    out = seed\n",
+    "    current = seed\n",
+    "    for i in range(n):\n",
+    "        #current = random.choice(list(markov[current].keys()))\n",
+    "        newone = proceed(markov2[current])\n",
+    "        out = out + ' ' + newone\n",
+    "        current = current.split()[1]+\" \"+newone\n",
+    "    return out\n",
+    "\n",
+    "generate2(generate('caterpillar',1),500)"
    ]
   }
  ],
