Inheritance, pocker finished

--- a/learning python/ch18 inheritance.ipynb
+++ b/learning python/ch18 inheritance.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -17,6 +17,7 @@
      "output_type": "stream",
      "text": [
       "2♣\n",
+      "Q♣\n",
       "False\n",
       "True\n",
       "False\n",
@@ -35,11 +36,27 @@
     "    # Interestingly, it seems that I can only use * in the left side once, so I cannot * both vectors\n",
     "    # print(rankMap)\n",
     "    suitMap = ['♣','♢','♡','♠']\n",
-    "    \n",
+    "    # ['None', 'A', '2', '3', '4', '5', '6', '7', '8', '9', '10', 'J', 'Q', 'K']\n",
+    "    decoderRanks = {'A':1, 'J':11, 'Q':12, 'K':13}\n",
+    "    decoderSuit = {'c':0, 'd':1, 'h':2, 's':3}    \n",
     "    \n",
     "    def __init__(self,suit=0,rank=1):\n",
-    "        self.suit = suit # Instance attributes\n",
-    "        self.rank = rank\n",
+    "        if isinstance(suit, int):\n",
+    "            self.suit = suit # Instance attributes\n",
+    "        elif type(suit)==str:\n",
+    "            self.suit = Card.decoderSuit[suit]\n",
+    "        else:\n",
+    "            raise ValueErorr('Illegal card suit declaration')\n",
+    "        \n",
+    "        if isinstance(rank, int):\n",
+    "            self.rank = rank\n",
+    "        elif type(rank)==str:\n",
+    "            if rank in Card.decoderRanks.keys():\n",
+    "                self.rank = Card.decoderRanks[rank]\n",
+    "            else:\n",
+    "                self.rank = int(rank) # Evaluate string\n",
+    "        else:\n",
+    "            raise ValueError('Illegal card rank declaration')\n",
     "        \n",
     "    def __str__(self):\n",
     "        return \"%s%s\" % (Card.rankMap[self.rank] , Card.suitMap[self.suit])\n",
@@ -59,6 +76,7 @@
     "\n",
     "a = Card(0,2)\n",
     "print(a)\n",
+    "print(Card('c','Q'))\n",
     "print(a==Card(0,3))\n",
     "print(a!=Card(0,3))\n",
     "print(a>Card(0,3))\n",
@@ -69,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +106,7 @@
       "Deck[52]: A♣ 2♣ 3♣ 4♣ 5♣ 6♣ 7♣ 8♣ 9♣ 10♣ J♣ Q♣ K♣ A♢ 2♢ 3♢ 4♢ 5♢ 6♢ 7♢ 8♢ 9♢ 10♢ J♢ Q♢ K♢ A♡ 2♡ 3♡ 4♡ 5♡ 6♡ 7♡ 8♡ 9♡ 10♡ J♡ Q♡ K♡ A♠ 2♠ 3♠ 4♠ 5♠ 6♠ 7♠ 8♠ 9♠ 10♠ J♠ Q♠ K♠\n",
       "K♠\n",
       "Deck[52]: A♣ 2♣ 3♣ 4♣ 5♣ 6♣ 7♣ 8♣ 9♣ 10♣ J♣ Q♣ K♣ A♢ 2♢ 3♢ 4♢ 5♢ 6♢ 7♢ 8♢ 9♢ 10♢ J♢ Q♢ K♢ A♡ 2♡ 3♡ 4♡ 5♡ 6♡ 7♡ 8♡ 9♡ 10♡ J♡ Q♡ K♡ A♠ 2♠ 3♠ 4♠ 5♠ 6♠ 7♠ 8♠ 9♠ 10♠ J♠ Q♠ 2♡\n",
-      "Deck[52]: 9♠ 2♢ 7♠ 9♢ Q♡ 3♡ 6♣ 5♡ K♡ 10♡ 2♡ 7♡ 9♡ A♢ 2♡ 2♠ K♣ 10♣ Q♣ 5♣ J♢ A♠ 7♣ 8♣ 3♢ 4♡ 6♠ 7♢ 6♡ J♠ 10♠ Q♠ 4♢ Q♢ 5♢ 9♣ J♣ 8♢ A♣ 3♣ 3♠ J♡ K♢ 8♠ 8♡ 4♠ A♡ 2♣ 6♢ 4♣ 5♠ 10♢\n"
+      "Deck[52]: 10♡ 5♢ A♡ 5♣ 5♠ 4♡ 10♣ K♢ 6♣ J♣ 10♠ 10♢ 3♢ 9♠ 3♠ A♢ 7♡ J♢ 8♠ 7♠ J♠ 8♡ K♡ Q♢ 8♣ 2♣ 2♡ 7♣ Q♠ 3♡ 5♡ Q♡ 8♢ 9♢ J♡ 7♢ 2♢ 2♡ Q♣ 4♢ 4♠ A♣ 6♡ 9♡ 4♣ 6♢ 3♣ 2♠ A♠ 6♠ K♣ 9♣\n"
      ]
     }
    ],
@@ -123,6 +141,9 @@
     "    def deal(self,hand,num=1):\n",
     "        for i in range(num):\n",
     "            hand.add(self.pop())\n",
+    "            \n",
+    "    def len(self):\n",
+    "        return len(self.cards)\n",
     "    \n",
     "                \n",
     "d = Deck()\n",
@@ -136,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +166,7 @@
        "__main__.Deck"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,60 +177,54 @@
     "        if _method in _type.__dict__:\n",
     "            return _type\n",
     "\n",
-    "find_defining_class(h, 'shuffle')"
+    "find_defining_class(d, 'shuffle')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 313,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "none[7]: 8♣ Q♢ K♢ 10♡ J♡ 2♠ 7♠\n",
-      "none[7]: A♣ 10♣ A♢ 7♢ 10♢ K♡ K♠\n",
-      "none[7]: 7♣ J♣ Q♣ 2♢ 6♡ 5♠ 10♠\n",
-      "Pair[7]: 9♣ 4♢ 9♢ 3♡ 5♡ 8♡ J♠\n",
-      "Three[7]: 6♣ 6♢ 9♡ Q♡ 3♠ 6♠ 8♠\n",
-      "2 pairs[7]: 2♣ 7♣ J♣ 10♢ 7♡ K♡ 10♠\n",
-      "none[7]: 8♣ 2♢ 3♢ 6♡ J♡ 4♠ 7♠\n",
-      "Pair[7]: 6♢ 9♢ K♢ 9♡ Q♡ 2♠ 5♠\n",
-      "none[7]: 3♣ J♢ Q♢ A♡ 2♡ 8♡ 6♠\n",
-      "Pair[7]: 5♣ 6♣ 5♢ 4♡ A♠ 3♠ 8♠\n",
-      "Pair[7]: 7♣ 3♢ 8♢ 9♡ 10♡ A♠ 9♠\n",
-      "2 pairs[7]: 5♣ Q♣ 7♡ K♡ 6♠ 7♠ Q♠\n",
-      "none[7]: 4♣ 9♣ K♣ 6♢ 5♡ 3♠ 10♠\n",
-      "Pair[7]: A♣ 2♣ 10♢ Q♢ A♡ 8♡ K♠\n",
-      "2 pairs[7]: 6♣ 8♣ 4♢ 5♢ 2♠ 4♠ 5♠\n",
-      "2 pairs[7]: 2♣ K♣ K♢ A♡ 8♡ 9♡ 8♠\n",
-      "Pair[7]: 5♣ 8♢ 5♡ J♡ 9♠ 10♠ K♠\n",
-      "2 pairs[7]: 3♣ 6♣ 2♢ 6♢ 4♡ A♠ 4♠\n",
-      "Pair[7]: 4♣ 2♡ Q♡ 3♠ 5♠ 6♠ Q♠\n",
-      "none[7]: 7♣ 8♣ Q♣ 4♢ 5♢ 10♢ J♠\n",
-      "none[7]: 3♣ 8♣ 6♢ J♢ A♡ 5♡ 2♠\n",
-      "none[7]: 4♣ 9♣ J♣ 5♢ 8♡ 10♠ K♠\n",
-      "Three[7]: Q♣ A♢ 7♢ Q♡ 9♠ J♠ Q♠\n",
-      "none[7]: 7♣ Q♢ K♢ 3♡ 6♡ 10♡ A♠\n",
-      "none[7]: 6♣ 2♢ 8♢ 9♢ K♡ 3♠ 7♠\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class Hand(Deck): # Inheritance: inherits to the main Deck class\n",
     "    \"\"\"Hand of cards\"\"\"\n",
     "    \n",
-    "    def __init__(self,label=''):\n",
+    "    def __init__(self,content=''):\n",
     "        self.cards = []\n",
-    "        self.label = label\n",
+    "        self.label = ''\n",
+    "        if len(content)>0:\n",
+    "            clist = content.split(' ')\n",
+    "            for code in clist:\n",
+    "                self.add(Card(code[-1],code[:-1])) # First suit, then rank\n",
+    "        self.classify()\n",
     "        \n",
     "    def take(self,deck,n=1):\n",
     "        deck.deal(self,n)\n",
     "        \n",
+    "    def count_chain(ranks):\n",
+    "        \"\"\"Wrapper for count_chain_inner that checks Ace as both 1 and 14\"\"\"\n",
+    "        ranks2 = [i if i!=1 else 14 for i in ranks]\n",
+    "        return max(Hand.count_chain_inner(ranks) , Hand.count_chain_inner(ranks2))\n",
+    "        \n",
+    "    def count_chain_inner(ranks):\n",
+    "        \"\"\"Looks for straights in a list of ranks\"\"\"\n",
+    "        ranks = list(set(ranks))\n",
+    "        ranks.sort()\n",
+    "        longest_chain = 0\n",
+    "        current_chain = 0\n",
+    "        for _ in range(len(ranks)-1):\n",
+    "            if ranks[_+1]-ranks[_]==1: # Count correct transitions from one card to next card\n",
+    "                current_chain += 1\n",
+    "                if longest_chain<current_chain:\n",
+    "                    longest_chain = current_chain\n",
+    "            else:\n",
+    "                current_chain = 0\n",
+    "        return longest_chain+1 # We add 1 because 1 transition is 2 cards etc.\n",
+    "        \n",
     "    def classify(self):\n",
     "        \"\"\"Classifies a poker hand\"\"\"\n",
-    "        self.label = 'none'\n",
+    "        if len(self.cards)==0:\n",
+    "            return\n",
     "        self.cards.sort() # Because we defined all <>, we can sort cards! May be helpful.\n",
     "        histR = {}\n",
     "        histS = {}\n",
@@ -217,30 +232,123 @@
     "            histR[c.rank] = histR.get(c.rank,0)+1\n",
     "            histS[c.suit] = histS.get(c.suit,0)+1\n",
     "        v = [histR[_] for _ in histR.keys()]\n",
-    "        # Straight flush should be here\n",
-    "        if max(v)==4:\n",
+    "        \n",
+    "        longest_chain = []\n",
+    "        for i_suit in range(4):\n",
+    "            longest_chain.append(0) \n",
+    "            longest_chain[i_suit] = Hand.count_chain([c.rank for c in self.cards if c.suit==i_suit])\n",
+    "        single_color_chain = max(longest_chain)        \n",
+    "        overall_chain = Hand.count_chain([c.rank for c in self.cards])\n",
+    "\n",
+    "        if single_color_chain>=5:\n",
+    "            self.label = 'Straight Flush'\n",
+    "        elif max(v)==4:\n",
     "            self.label = 'Four'\n",
     "        elif sum([_==3 for _ in v])==1 & sum([_==2 for _ in v])==1:\n",
     "            self.label = 'House'\n",
     "        elif max([histS[_] for _ in histS.keys()])==5:\n",
     "            self.label = 'Flush'\n",
-    "        # Check for straight should be here\n",
+    "        elif overall_chain>=5:\n",
+    "            self.label = 'Straight'\n",
     "        elif max(v)==3:\n",
     "            self.label = 'Three'\n",
     "        elif sum([_==2 for _ in v])==2:\n",
     "            self.label = '2 pairs'\n",
     "        elif sum([_==2 for _ in v])==1:\n",
     "            self.label = 'Pair'\n",
-    "        \n",
-    "        \n",
-    "for j in range(5):\n",
+    "        else:\n",
+    "            self.label = 'none'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 314,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Straight[7]: 9♣ 6♢ 8♢ Q♢ 5♡ 7♡ 8♠\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Hand('9c 6d 8d Qd 5h 7h 8s'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 315,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pair[7]: 3♣ 5♣ 5♢ 9♡ 4♠ 6♠ 8♠\n",
+      "Pair[7]: 8♣ 2♢ 9♢ Q♢ 3♡ J♡ 2♠\n",
+      "Pair[7]: 6♣ 8♢ 4♡ 7♡ 7♠ 10♠ J♠\n",
+      "Pair[7]: 2♣ 7♣ 10♣ Q♣ 3♢ 10♢ A♡\n",
+      "2 pairs[7]: 4♣ 4♢ 10♡ K♡ 3♠ 5♠ K♠\n",
+      "2 pairs[7]: 9♣ J♣ 2♡ 6♡ Q♡ 9♠ Q♠\n",
+      "Three[7]: A♣ A♢ 7♢ J♢ K♢ 5♡ A♠\n",
+      "2 pairs[7]: J♢ 3♡ J♡ 3♠ 4♠ 6♠ 9♠\n",
+      "Pair[7]: 7♣ Q♣ 2♢ 8♢ A♡ 9♡ A♠\n",
+      "           Pair: \t 43.88429\n",
+      "        2 pairs: \t 21.47571\n",
+      "          Three: \t  4.98429\n",
+      "       Straight: \t  4.62000\n",
+      "          Flush: \t  2.92000\n",
+      "          House: \t  2.48857\n",
+      "           Four: \t  0.16571\n",
+      " Straight Flush: \t  0.02571\n",
+      "           none: \t 19.43571\n"
+     ]
+    }
+   ],
+   "source": [
+    "handSize = 7\n",
+    "type_hist = {'Pair':0, '2 pairs':0, 'Three':0, 'Straight':0, 'Flush':0, 'House':0, 'Four':0, 'Straight Flush':0}\n",
+    "counter = 0\n",
+    "for j in range(10000):\n",
     "    d = Deck()\n",
     "    d.shuffle()\n",
-    "    for i in range(5):\n",
+    "    hs_in_d = int(d.len()/handSize)\n",
+    "    for i in range(hs_in_d):\n",
+    "        counter += 1\n",
     "        h = Hand()\n",
-    "        h.take(d,7)\n",
+    "        h.take(d,handSize)\n",
     "        h.classify()\n",
-    "        print(h)"
+    "        type_hist[h.label] = type_hist.get(h.label,0)+1\n",
+    "        if counter<10:\n",
+    "            print(h)\n",
+    "        \n",
+    "print('\\n'.join([\"%15s: \\t %8.5f\" % (i,100.0*type_hist[i]/counter) for i in type_hist.keys()]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 302,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pair[7]: 9♣ 6♢ 8♢ Q♢ 5♡ 7♡ 8♠\n"
+     ]
+    }
+   ],
+   "source": [
+    "shift = random.randint(1,13-5)\n",
+    "ranks = [_+shift for _ in range(5)] + [random.randint(1,13) for _ in range(2)]\n",
+    "suits = [random.randint(0,3) for _ in range(7)]\n",
+    "h = Hand()\n",
+    "h.cards = [Card(suits[_],ranks[_]) for _ in range(7)]\n",
+    "h.shuffle()\n",
+    "h.classify()\n",
+    "print(h)"
    ]
   }
  ],
