--- a/classic/Untitled.ipynb
+++ b/classic/Untitled.ipynb
@@ -25,35 +25,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "' aa a a aa    b bceeefcegehhiiilllllimmnnnoooppnrrrOssstttyy'"
+       "'         Oaaaaaabbcceeeeefghhiiiilllllmmnnnnooopprrrssstttyy'"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def cs(a):\n",
-    "    if len(a)==1:\n",
+    "    if len(a)<=1:\n",
     "        return a\n",
-    "    n = len(a)-1\n",
-    "    l = 0\n",
-    "    for r in range(1,len(a)):\n",
+    "    n = len(a)-1               # Last element, store pivot there\n",
+    "    l = 0                      # pointer to where small values will be shoved\n",
+    "    #print(''.join(a))\n",
+    "    for r in range(0,n):       # For each non-pivot\n",
     "        #print(r,l,''.join(a))\n",
-    "        if a[r]<a[n]:\n",
-    "            (a[r],a[l]) = (a[l],a[r]) # Swap\n",
-    "            l += 1\n",
-    "    (a[l],a[n]) = (a[n],a[l])\n",
+    "        if a[r]<a[n]:          # If smaller than pivot,\n",
+    "            if r>l:            # and cannot be left in place,\n",
+    "                (a[r],a[l]) = (a[l],a[r]) # Swap (shove it to the left)\n",
+    "            l += 1             # Point to the next shoving point\n",
+    "\n",
+    "    # By the end of this, all a<pivot are in locations<l\n",
     "    \n",
-    "    if l>0:\n",
-    "        a = cs(a[:l]) + cs(a[l:])\n",
+    "    #print(l,n,''.join(a))\n",
+    "    if l<n:\n",
+    "        (a[l],a[n]) = (a[n],a[l]) # If any a>pivot are present, move pivot to the border\n",
+    "        a = cs(a[:l]) + [a[l]] + cs(a[(l+1):])\n",
+    "    else:\n",
+    "        a = cs(a[:l]) + [a[l]]\n",
     "        \n",
     "    return a\n",
     "\n",
