Search algs updated

--- a/classic/searches.ipynb
+++ b/classic/searches.ipynb
@@ -25,16 +25,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'         Oaaaaaabbcceeeeefghhiiiilllllmmnnnnooopprrrssstttyy'"
+       "'      !,aabcdefghjklmnoopqrstuuvwxyyz'"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
     "        \n",
     "    return a\n",
     "\n",
-    "a = list('Only some animals can really appreciate the birth of goblins')\n",
+    "a = list('sphynx of black quartz, judge my vow!')\n",
     "#a = list('squirrel')\n",
     "''.join(cs(a))"
    ]
